--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-    "homepage": "https://elancer-dev.github.io/fb-css-test/",
     "name": "fb-css-test",
     "version": "0.1.0",
     "private": true,
@@ -8,6 +7,7 @@
         "@testing-library/react": "^9.5.0",
         "@testing-library/user-event": "^7.2.1",
         "bootstrap": "^4.5.2",
+        "node-sass": "^4.14.1",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-redux": "^7.2.1",
