--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    "homepage": "https://elancer-dev.github.io/fb-css-test/",
     "name": "fb-css-test",
     "version": "0.1.0",
     "private": true,
